# book-of-monads

./: .gitignore  CHANGELOG.md  README.md  book-of-monads.cabal  hie.yaml
src/: Ch0.hs  Ch1.hs  Ch3.hs  Ch4.hs  Ch5.hs  Repl.hs
