cabal-version:      2.4
name:               book-of-monads
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Olson
maintainer:         matt.j.olson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    default-extensions:
        DerivingStrategies
      , FlexibleInstances
      , LambdaCase
      , OverloadedStrings
      , RecordWildCards
      , TypeApplications
    exposed-modules:
        Repl
    build-depends:
        base ^>=4.14.3.0
      , text
    default-language: Haskell2010

executable book-of-monads
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.3.0
        , book-of-monads
    hs-source-dirs:   app
    default-language: Haskell2010
